[package]
name = "tyr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64-simd = "0.7"
clap = { version = "3", features = ["derive"] }
encoding_rs = "0.8"
jsc-safe = { path = "../jsc", version = "0.0.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(all(target_os = "linux", target_env = "musl", target_arch = "aarch64")))'.dependencies]
mimalloc-rust = "0.2"
