[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
num_cpus = "1"
octorust = "0.1"
reqwest = "0.11"
tar = "0.4"
toml = { version = "0.5" }
serde = { version = "1", features = ["derive"] }
tokio = "1"
