[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls-tls"]
native-tls = ["octorust/native-tls", "reqwest/default-tls"]
rustls-tls = ["octorust/rustls-tls", "reqwest/rustls-tls"]

[dependencies]
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
octorust = "0.2"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "multipart",
] }
serde = { version = "1", features = ["derive"] }
tar = "0.4"
tokio = "1"
toml = { version = "0.5" }
